# roboy_speech_synthesis

./: README.md
speech_synthesis/: CMakeLists.txt  package.xml
speech_synthesis/launch/: speech_synthesis.launch
speech_synthesis/scripts/: .tts_server.py.swp  tts_server.py  tts_server_de.py
speech_synthesis/yaml/: speech_synthesis.yaml
speech_synthesis_msgs/: CMakeLists.txt  package.xml
speech_synthesis_srvs/: CMakeLists.txt  package.xml
