<?xml version="1.0"?>
<package>
  <name>speech_synthesis_srvs</name>
  <version>1.0.0</version>
  <description>speech_synthesis_srvs</description>

  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>